@@ -31,6 +31,7 @@ This release includes the following bugfixes:
  o multi interface memory leak with CURLMOPT_MAXCONNECTS set
  o CURLINFO_CONTENT_LENGTH_DOWNLOAD size from file:// "transfers" with
    CURLOPT_NOBODY set true
+ o memory leak on some libz errors for content encodings
 
 This release includes the following known bugs:
 
@@ -41,6 +42,6 @@ advice from friends like these:
 
  Lisa Xu, Daniel Fandrich, Craig A West, Alexey Borzov, Sharad Gupta,
  Peter Sylvester, Chad Monroe, Markus Moeller, Yang Tse, Scott Cantor,
- Patrick Scott, Hidemoto Nakada, Jocelyn Jaubert
+ Patrick Scott, Hidemoto Nakada, Jocelyn Jaubert, Andre Guibert de Bruet
 
         Thanks! (and sorry if I forgot to mention someone)
